--- a/masthead css day 2 project.html
+++ b/masthead css day 2 project.html
@@ -38,19 +38,19 @@
           <a class="nav-link" href="#">Connect</a>
 			 </li>
 			 <form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit"><img src="https://openclipart.org/image/800px/svg_to_png/213239/Search-icon.png" </button>
-			</form>
-       </ul>
-
-
-
-	  </div>
-	</nav>
-
-
-
-
+				 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><img class="img-fluid" src="https://openclipart.org/image/20px/svg_to_png/213239/Search-icon.png"></button>
+			  </form>
+			</div>
+		 </div>
+		 <div class="topnav">
+		<div class="topnav-right">
+			<a href="#search">Sign In/Dealer Locator</a>
+		</div>
+		<a href="#search">View Cart</a>
+			<img class="img-fluid" src="http://www.clker.com/cliparts/5/j/r//G/y/p/shopping-cart-icon.svg" alt="cart" height="41" width="41"></button>
+	</div>
+	 </nav>
 
 
 	<!-- check out the modal we added here!! http://getbootstrap.com/javascript/#modals -->
